# smart-document-assistant

./: LICENSE  README.md  important_notes.txt  pyproject.toml  requirements.txt
config/: settings.yaml
data/raw/: business_csv_generator.py  tech_sales_csv_generator.py
models/: gradient_boosting_sales_predictor.pkl
notebooks/: 1_exploratory_data_analysis.ipynb  2_model_training.ipynb
src/api/: main.py  schemas.py
src/data_processing/: data_loader.py  document_processor.py
src/models/: classical_ml.py  rag_system.py
src/utils/: config.py  logger.py
tests/integration/: test_data_pipeline.py
tests/unit/: test_data_processing.py  test_document_processor.py
