[tool.poetry]
name = "smart-document-assistant"
version = "0.1.0"
description = ""
authors = ["vgmariucci <vgmariucci@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
langchain = "^0.3.25"
fastapi = "^0.115.12"
python-dotenv = "^1.1.0"
faker = "^37.3.0"
uvicorn = "^0.34.2"
numpy = "^2.2.6"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
pytest = "^8.3.5"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
